grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      optional(repeat1($._statement)),
    ),
    hash_bang_line: $ => /#!.*/,

    _statement: $ => choice(
      seq($._simple_statement, $._newline),
      $._compound_statement
    ),
    import: $ => seq(
      'import',
      field('clause', $.import_clause),
      'from',
      field('source', $.string_pattern)
    ),
    import_clause: $ => seq(
      '{',
      commaSep1(choice(
        alias($.identifier, $.identifier_pattern_name),
        $.import_clause_identifier_pair
      )),
      '}'
    ),
    import_clause_identifier_pair: $ => seq(
      field('left', alias($.identifier, $.identifier_pattern_name)),
      ':',
      field('right', alias($.identifier, $.identifier_pattern_name))
    ),

    _simple_expression: $ => prec.left(PREC.EXPRESSION, choice(
      $._group,
      alias($.simple_abstraction, $.abstraction),
      $.application,
      $.prefix_application,
      $.infix_application,
      $.pipeline,
      $.access,
      alias($.simple_assignment, $.assignment),
      alias($.simple_export, $.export),
      $.return,
      alias($.simple_if, $.if),
      $.map,
      $.tuple,
      $.list,
      $.list_comprehension,
      $.type_interpretation,
      $.identifier,
      $._literal
    )),
    prefix_application: $ => prec.right(PREC.PREFIX, seq(
      field('abstraction', alias($._operator, $.identifier)),
      field('argument', $._simple_expression)
    )),
    infix_application: $ => choice(
      prec.left(PREC.NOT, seq(field('left', $._simple_expression), field('abstraction', alias('!', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.EXPONENTIATION, seq(field('left', $._simple_expression), field('abstraction', alias('^', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.PRODUCT, seq(field('left', $._simple_expression), field('abstraction', alias('*', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.PRODUCT, seq(field('left', $._simple_expression), field('abstraction', alias('/', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.SUM, seq(field('left', $._simple_expression), field('abstraction', alias('+', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.SUM, seq(field('left', $._simple_expression), field('abstraction', alias('-', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.MOD, seq(field('left', $._simple_expression), field('abstraction', alias('%', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.ORDER, seq(field('left', $._simple_expression), field('abstraction', alias('<', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.ORDER, seq(field('left', $._simple_expression), field('abstraction', alias('<=', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.ORDER, seq(field('left', $._simple_expression), field('abstraction', alias('>', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.ORDER, seq(field('left', $._simple_expression), field('abstraction', alias('>=', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.EQUALITY, seq(field('left', $._simple_expression), field('abstraction', alias('==', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.EQUALITY, seq(field('left', $._simple_expression), field('abstraction', alias('!=', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.EQUALITY, seq(field('left', $._simple_expression), field('abstraction', alias('===', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.EQUALITY, seq(field('left', $._simple_expression), field('abstraction', alias('!==', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.AND, seq(field('left', $._simple_expression), field('abstraction', alias('&&', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.OR, seq(field('left', $._simple_expression), field('abstraction', alias('||', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.IMPLICATION, seq(field('left', $._simple_expression), field('abstraction', alias('==>', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.BICONDITIONAL, seq(field('left', $._simple_expression), field('abstraction', alias('<=>', $.infix_application_operator)), field('right', $._simple_expression))),
      prec.left(PREC.OPERATOR_INFIX, seq(
        field('left', $._simple_expression),
        field('abstraction', alias($._operator, $.infix_application_operator)),
        field('right', $._simple_expression))
      ),
      prec.left(PREC.NAMED_INFIX, seq(
        field('left', $._simple_expression),
        '`',
        field('abstraction', alias($._identifier_without_operators, $.infix_application_operator)),
        '`',
        field('right', $._simple_expression))
      )
    ),

    map: $ => seq(
      '{',
      commaSep(choice(
        $.expression_pair,
        alias($.identifier, $.shorthand_pair_identifier),
        $.spread
      )),
      '}'
    ),
    tuple: $ => seq('(', commaSep2(choice($._simple_expression, $.spread)), ')'),
    list: $ => seq('[', commaSep(choice($._simple_expression, $.spread)), ']'),
    expression_pair: $ => seq(
      choice(
        seq('[', field('left', $._simple_expression), ']'),
        field('left', alias($.identifier, $.shorthand_access_identifier))
      ),
      ':',
      field('right', $._simple_expression)
    ),
    spread: $ => seq('...', field('value', $._simple_expression)),

    _identifier_without_operators: $ => /[a-z][a-z0-9_]*\??/,
    _operator: $ => /[!@$%^&*|<>~*\\\-+.=]+/,
    identifier: $ => choice($._operator, $._identifier_without_operators),

    _decimal: $ => {
      const digits = repeat1(/_?[0-9]+/)
      const exponent = seq(/e-?/, digits)

      return token(choice(
        seq(digits, '.', digits, optional(exponent)),
        seq(digits, exponent)
      ))
    },
    _integer: $ => token(choice(
      seq('0x', repeat1(/_?[A-Fa-f0-9]+/)),
      seq('0o', repeat1(/_?[0-7]+/)),
      seq('0b', repeat1(/_?[0-1]+/)),
      seq(repeat1(/_?[0-9]+/))
    )),
    number: $ => choice($._decimal, $._integer),

    string: $ => seq(
      $._string_start,
      repeat(choice($.interpolation, $.escape_sequence, $._string_content)),
      $._string_end
    ),
