test/corpus/destructuring.txt
============================================
map destructuring declaration
============================================

{'b' -> b} := a

---

(program
  (declaration
    left: (map
      (expression_pair
        left: (string)
        right: (identifier)))
    right: (identifier)))

============================================
tuple destructuring declaration
============================================

(b, c) := a
(b, c, ...d) := a

---

(program
  (declaration
    left: (tuple
      (identifier)
      (identifier))
    right: (identifier))
  (declaration
    left: (tuple
      (identifier)
      (identifier)
      (spread
        value: (identifier)))
    right: (identifier)))

============================================
list destructuring declaration
============================================

[b, c] := a
[b, c, ...d] := a

---

(program
  (declaration
    left: (list
      (identifier)
      (identifier))
    right: (identifier))
  (declaration
    left: (list
      (identifier)
      (identifier)
      (spread
        value: (identifier)))
    right: (identifier)))
