test/corpus/statements.txt
==================
import
==================

import {a => b, c} from 'source'

---

(program
  (import
    clause: (import_clause
      (import_clause_identifier_pair
        left: (identifier)
        right: (identifier))
      (identifier))
    source: (string)))
